# finite_automaton

./: .gitignore  CMakeLists.txt  README.md  input.txt  run.sh  test.sh
main/: main.cpp
source/: finite_automaton.cpp  finite_automaton.h  sub_automaton.cpp  sub_automaton.h  user_interface.cpp  user_interface.h
source/automatons/: complete_deterministic.cpp  complete_deterministic.h  deterministic.cpp  deterministic.h  finite.cpp  finite.h  no_empty_words.cpp  no_empty_words.h  sub_automaton.cpp  sub_automaton.h
source/deterministic_automaton/: delete_long_words.cpp  delete_long_words.h  transformer.cpp  transformer.h
source/empty_word_deleter/: empty_word_deleter.cpp  empty_word_deleter.h
source/practice1/: parser.cpp  parser.h
source/regular_expression/: correct_string.cpp  correct_string.h  parse_reverse_polish_notation.cpp  parse_reverse_polish_notation.h  transformer.cpp  transformer.h
tests/: practice1.cpp  practice1.h  tests.cpp  tests.h
